--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <main> 
         <section id="login"> 
-            <div id="Imagem"> 
-                Foto
+            <div id="imagem"> 
+                <!--Aqui vai a imagem nas css-->
             </div> 
             <div id="formulario"> 
                 <h1> 
@@ -20,7 +20,7 @@
                     Seja bem-vindo(a) novamente. Faça Login para acessar sua conta e poder fazer as configurações no seu ambiente.
                 </p> 
                 <form action="login.php" method="post"> 
-                    
+
                 </form>
             </div>
         </section>
